[package]
name = "json_transform"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", default_feature = false, features = ["derive", "serde_derive"] }
serde_json = {version = "1.0.145", features = ["preserve_order"]}
thiserror = "2.0.16"
regex = "1.11.2"

[lib]
name = "json_transform"
path = "src/lib.rs"
